--- a/templates/result.html
+++ b/templates/result.html
@@ -31,8 +31,10 @@
     }
     
     body {
-        padding: 100px 306px 136px;
+        {% comment %} padding: 100px 306px 136px;  {% endcomment %}
         background-color:#FAFAFA;
+        margin: 0px auto;
+        border: 2px solid #000;
     }
     
     .content{
@@ -40,7 +42,7 @@
         height: 900px;
         left:306px;
         background-color:#FFFFFF;
-        padding: 90px;
+        padding: 5.625rem;
     }
     
     .container{
@@ -50,7 +52,7 @@
     h1{
         font-family: 'Switzer', sans-serif;
         font-weight: 500;
-        font-size: 100px;
+        font-size: 6.25rem;
         line-height: 132px;
         letter-spacing: -3%;
         color: #121212;
@@ -61,9 +63,9 @@
     }
     
     .body-content{
-        margin-top: 10px;
+        margin-top: 0.625rem;
         font-weight: 300;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 30px;
         letter-spacing: -3%;
         color: #454545;
@@ -71,28 +73,28 @@
     
     .career{
         font-weight: 400;
-        font-size: 15px;
+        font-size: 0.9375rem;
         letter-spacing: -3%;
         color: #6A6A6A;
     }
     
     .score-career{
         text-align: center;
-        margin-bottom: 48px;
+        margin-bottom: 3rem;
     }
     
     .name{
         color: #464646;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 300;
     }
     
     button{
-        padding:15.5px 66.5px ;
+        padding:0.96875rem 4.15625rem ;
         background-color:#2E2CCF;
         border:none;
         border-radius: 4px;
-        margin-top: 36px;
+        margin-top: 2.25rem;
         text-align: center;
         position: absolute;
     }
@@ -102,13 +104,13 @@
         text-decoration: none;
         font-family: 'Inter', sans-serif;
         font-weight: 300;
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 30px;
         letter-spacing: -3%;
     }
     
     .button-container{
-        margin-top:48px;
+        margin-top: 3rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -117,16 +119,16 @@
     footer p{
         font-family: 'Inter', sans-serif;
         font-weight: 400;
-        font-size: 15px;
+        font-size: 0.9375rem;
         line-height: 25px;
         letter-spacing: -3%;
         color: #454545;
-        margin-top: 36px;
+        margin-top: 2.25rem;
     }
     
     footer{
         border-top: 1px solid #EBEBEB;
-        margin-top: 100px;
+        margin-top: 6.25rem;
         display: flex;
         justify-content: space-between;
     }
