--- a/templates/result.html
+++ b/templates/result.html
@@ -94,7 +94,9 @@
 				border: none;
 				border-radius: 4px;
 				margin-top: 2.25rem;
-				text-align: center;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				position: absolute;
 			}
 
@@ -143,6 +145,10 @@
 
 				.name {
 					font-size: 1rem;
+				}
+
+				footer {
+					margin-top: 4.25rem;
 				}
 			}
 
@@ -221,4 +227,3 @@
 		</div>
 	</body>
 </html>
-
