edited resource links

--- a/templates/result.html
+++ b/templates/result.html
@@ -212,7 +212,7 @@
 				</div>
 				<div class="button-container">
 					<button>
-						<a href="https://github.com/lulunwenyi"> Find Resources </a>
+						<a href="https://lulunwenyi.notion.site/resources-221edef5d08c4018a4259eba72a7407d"> Find Resources </a>
 					</button>
 				</div>
 
